@@ -25,10 +25,10 @@
 	    <input type="password" id="password" name="ipampassword" class="login form-control input-sm" placeholder="<?php print _('Password'); ?>" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></input>
 	    <?php
 	    // add requested var for redirect
-	    if(isset($_COOKIE['phpipamredirect'])) {
+	    if(!empty($_COOKIE['phpipamredirect'])) {
 		    //ignore login, logout
 		    if(strpos($_COOKIE['phpipamredirect'],"login")==0 && strpos($_COOKIE['phpipamredirect'],"logout")==0)
-	        print "<input type='hidden' name='phpipamredirect' id='phpipamredirect' value='".@$_COOKIE['phpipamredirect']."'>";
+	        print "<input type='hidden' name='phpipamredirect' id='phpipamredirect' value='".escape_input($_COOKIE['phpipamredirect'])."'>";
 	    }
 	    ?>
 	</div>
